--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - '3306:3306'
 
   node:
+    image: super-app-jenkins-node
     build:
       context: ./node
     ports:
@@ -18,6 +19,7 @@ services:
       - mysql
 
   php:
+    image: super-app-jenkins-php
     build:
       context: ./php
     ports:
