--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       MYSQL_ROOT_PASSWORD: 'password'
     ports:
       - '3306:3306'
+    networks:
+      - app-network
 
   node:
     image: super-app-jenkins-node
@@ -18,6 +20,8 @@ services:
       - '3000:3000'
     depends_on:
       - mysql
+    networks:
+      - app-network
 
   php:
     image: super-app-jenkins-php
@@ -26,3 +30,13 @@ services:
       context: ./php
     ports:
       - '80:80'
+    networks:
+      app-network:
+        ipv4_address: 172.28.1.2
+
+  networks:
+    app-network:
+      driver: bridge
+      ipam:
+        config:
+          - subnet: 172.28.1.0/24
