--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,7 @@ services:
     container_name: super-app-jenkins-php
     build:
       context: ./php
+    volumes:
+      - /opt/tomcat/.jenkins/workspace/super-app-project/php:/var/www/html
     ports:
       - '80:80'
